# mentalyc-note

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: app_config.yml  config_helper.py  logger.py
frontend/: index.html  script.js  styles.css
mentalyc_ai/: __init__.py
mentalyc_ai/agents/: agent.py  base_agent.py
mentalyc_ai/nodes/: node.py
mentalyc_ai/prompt/templates/: classifier_system_message.txt  gad7_system_message.txt  phq9_system_message.txt  summarizer_system_message.txt
mentalyc_ai/routers/: router.py
mentalyc_ai/schema/: gad7_schema.py  phq9_schema.py  sentiment_schema.py  state.py  summarize_schema.py
src/: main.py
src/controllers/: therapy.py
src/exceptions/: custom_exception.py
src/services/: __init__.py  therapy_service.py
src/utils/: app_error_messages.py  app_notification_message.py  app_utils.py  async_utils.py  connection.py  mixins.py
